--- a/static/manifest.json
+++ b/static/manifest.json
@@ -1,6 +1,6 @@
 {
-	"short_name": "svelte-pwa",
-	"name": "svelte-test-pwa",
+	"short_name": "multilocationbookmarker",
+	"name": "multilocationbookmarker",
 	"start_url": "/",
 	"icons": [
 		{
@@ -21,5 +21,5 @@
 	"scope": "/",
 	"theme_color": "#3367D6",
 	"shortcuts": [],
-	"description": "Lofi to lofi beats, while using the scratchpad to list down tasks and thoughts"
+	"description": "Given a list of locations and urls, create links for each url for each location."
 }
